# CW5_SQL

./: README.md  constants_file_name.py  database_example.ini  dbmanager.py  main.py  pyproject.toml  requirements.txt  utils.py
