[tool.poetry]
name = "course-project-5-sql"
version = "0.1.0"
description = ""
authors = ["Nadezhda Lyovushkina <lyovushkina.nv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
